--- a/default.htm
+++ b/default.htm
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="http://js.arcgis.com/3.7/js/dojo/dijit/themes/claro/claro.css">
     <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.7/js/esri/css/esri.css" />
     <link href="themes/styles/theme.css" rel="stylesheet" type="text/css" />
+    <link id="theme" rel="stylesheet" type="text/css" />
     <link href="themes/styles/mediaQueries.css" rel="stylesheet" type="text/css" />
     <script src="coreLibrary/modernizr-2.6.2.js" type="text/javascript"></script>
 </head>
