--- a/default.htm
+++ b/default.htm
@@ -1,25 +1,25 @@
-﻿<!--
-    | Version 10.2
-    | Copyright 2013 Esri
-    |
-    | Licensed under the Apache License, Version 2.0 (the "License");
-    | you may not use this file except in compliance with the License.
-    | You may obtain a copy of the License at
-    |
-    |    http://www.apache.org/licenses/LICENSE-2.0
-    |
-    | Unless required by applicable law or agreed to in writing, software
-    | distributed under the License is distributed on an "AS IS" BASIS,
-    | WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    | See the License for the specific language governing permissions and
-    | limitations under the License.
-    -->
-<!DOCTYPE html>
+﻿<!doctype html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <!--
+     | Copyright 2013 Esri
+     |
+     | Licensed under the Apache License, Version 2.0 (the "License");
+     | you may not use this file except in compliance with the License.
+     | You may obtain a copy of the License at
+     |
+     |    http://www.apache.org/licenses/LICENSE-2.0
+     |
+     | Unless required by applicable law or agreed to in writing, software
+     | distributed under the License is distributed on an "AS IS" BASIS,
+     | WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     | See the License for the specific language governing permissions and
+     | limitations under the License.
+    -->
     <title>LIVE WORK LOCATE</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="icon" type="image/gif" sizes="16x16" />
     <link rel="stylesheet" href="http://js.arcgis.com/3.8/js/dojo/dijit/themes/claro/claro.css">
     <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.8/js/esri/css/esri.css" />
