--- a/help.htm
+++ b/help.htm
@@ -34,10 +34,17 @@
 </head>
 <body>
  	<div style="z-index: 1000; left: 5%; overflow: visible; width: 90%; position: absolute; top: 20px; height: 500px">
-	    <h3>Online Help: </h3>
-	    <p>
-	        Custom help information can be placed in this HTML document.
-	    </p>
+	 <h1>Online Help:</h1>
+	    <p>The<b> Live, Work, Locate</b> application allows potential citizens and businesses to explore a community and determine if they would like to relocate there.</p>
+        <h4><u>Finding Information</u></h4>
+        <p>The Live application highlights what&#39;s nearby for people who are considering moving to the community. The Work application highlights employers, educational facilities, transportation options, and demographics in the community illustrating the employment opportunities in the area. The Locate application highlights business oriented incentives, employers, educational facilities, transportation options, and demographics in the community illustrating the benefits to locating new businesses to the area.</p>
+        <p>Select the application best representing your interest in the community whether, living, working, or locating.</p>
+        <h4><u>Map Based Navigation</u></h4>
+        <p>There are several ways to interact with the map:<br /><br />1. Tap a point of interest you&#39;d like to see<br />2. Hold down the shift key and drag a box on the map to zoom in<br />3. Hold down Ctrl+Shift to zoom out<br />4. Roll your mouse roller to zoom in/out<br />5. Drag the zoom slider to zoom in/out</p>
+        <h4><u>Searching</u></h4>
+        <p>The search box can be used to find an address, road name, or county:<br /><br />1. Enter the address into the Search box<br />2. Enter the number of minutes you are willing to drive to points of interest<br />3. Click on any of the What&#39;s nearby items in the panel or any of the items on the map to get more information<br /></p>
+        <h4><u>Browser Compatibility</u></h4>
+        <p>The Live Work Locate application is supported on desktops, smartphones, and tablet devices with the following browsers: Microsoft Internet Explorer 8/9/10, Mozilla Firefox, Google Chrome, and Apple Safari.<br/><br/></p>
     </div>
 </body>
 </html>
