--- a/default.htm
+++ b/default.htm
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="js/library/themes/styles/legacyBrowser.css">
     <![endif]-->
 </head>
-<body class="claro">
+<body class="claro esriCTBody">
     <script src="js/library/coreLibrary/dojoConfiguration.js" type="text/javascript"></script>
     <script type="text/javascript" src="//js.arcgis.com/3.8compact/"></script>
     <script src="js/library/coreLibrary/bootStrapper.js" type="text/javascript"></script>
