--- a/help.htm
+++ b/help.htm
@@ -44,7 +44,7 @@
         <h4><u>Searching</u></h4>
         <p>The search box can be used to find an address, road name, or county:<br /><br />1. Enter the address into the Search box<br />2. Enter the number of minutes you are willing to drive to points of interest<br />3. Click on any of the What&#39;s nearby items in the panel or any of the items on the map to get more information<br /></p>
         <h4><u>Browser Compatibility</u></h4>
-        <p>The Live Work Locate application is supported on desktops, smartphones, and tablet devices with the following browsers: Microsoft Internet Explorer 8/9/10, Mozilla Firefox, Google Chrome, and Apple Safari.<br/><br/></p>
+        <p>The Live Work Locate application is supported on desktops and tablet devices with the following browsers: Microsoft Internet Explorer 8/9/10/11, Mozilla Firefox, Google Chrome, and Apple Safari.<br/><br/></p>
     </div>
 </body>
 </html>
