--- a/default.htm
+++ b/default.htm
@@ -20,8 +20,8 @@
     <title>LIVE WORK LOCATE</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="stylesheet" href="http://js.arcgis.com/3.8/js/dojo/dijit/themes/claro/claro.css" />
-    <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.8/js/esri/css/esri.css" />
+    <link rel="stylesheet" href="//js.arcgis.com/3.11/dijit/themes/claro/claro.css" />
+    <link rel="stylesheet" href="//js.arcgis.com/3.11/esri/css/esri.css" />
     <link href="js/library/themes/styles/theme.css" rel="stylesheet" type="text/css" />
     <link id="theme" rel="stylesheet" type="text/css" />
     <link href="js/library/themes/styles/mediaQueries.css" rel="stylesheet" type="text/css" />
@@ -32,7 +32,7 @@
 </head>
 <body class="claro esriCTBody">
     <script src="js/library/coreLibrary/dojoConfiguration.js" type="text/javascript"></script>
-    <script type="text/javascript" src="//js.arcgis.com/3.8compact/"></script>
+    <script type="text/javascript" src="//js.arcgis.com/3.11/"></script>
     <script src="js/library/coreLibrary/bootStrapper.js" type="text/javascript"></script>
     <div id="esriCTParentDivContainer" class="esriCTFullHeightWidth">
     </div>
